hooks/k8s-bootstrap/ondemand.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ondemand
  labels:
    name: ondemand
